--- a/CapaBD/CapaBD.csproj
+++ b/CapaBD/CapaBD.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CBDIniciarSesion.cs" />
+    <Compile Include="CBRegistrarProductos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
