--- a/CapaTabla/CapaTabla.csproj
+++ b/CapaTabla/CapaTabla.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CTProductos.cs" />
     <Compile Include="CTPersonal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
