--- a/CapaBD/CapaBD.csproj
+++ b/CapaBD/CapaBD.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CBDBuscarProductos.cs" />
     <Compile Include="CBDIniciarSesion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
