Agregar facturación: guardado en BD, nuevas clases BD/Logica/Tabla, ajustes PantallaPrincipal (no logre arreglar a que se conectara a mi bd)

--- a/CapaBD/CapaBD.csproj
+++ b/CapaBD/CapaBD.csproj
@@ -41,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CBDFactura.cs" />
+    <Compile Include="CBDFacturaDetalle.cs" />
     <Compile Include="CBDIniciarSesion.cs" />
+    <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
