--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLFactura.cs" />
     <Compile Include="CLIniciarSesion.cs" />
     <Compile Include="CLFacturacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
